# foremon

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
config/: config_make.toml  empty.toml  parallel.toml  pyproject.toml  sanity-check.toml
foremon/: __init__.py  __main__.py  app.py  cli.py  config.py  debounce.py  display.py  errors.py  monitor.py  task.py  util.py
runmon/: VERSION.txt  __main__.py  atexit_handler.py  display.py  monitor.py  queue.py
tests/: README.md  cli_fixtures.py  conftest.py  fixtures.py  fixtures2.py  test_app.py  test_cli.py  test_config.py  test_debounce.py  test_monitor.py  test_runmon.py  test_task.py
tests/expect/: basic.exp  docker.sh
tests/samples/: script2.py
tests/samples/echo/: __main__.py
tests/samples/module2/: __init__.py
tests/samples/server/: __main__.py
water/: __init__.py  __main__.py  atexit_handler.py  monitor.py  queue.py
